improves pdf readability and fixes issues with loading files in summary container

--- a/src/components/FileTemplate/FileTemplate.css
+++ b/src/components/FileTemplate/FileTemplate.css
@@ -9,7 +9,7 @@
 }
 
 .display {
-  width: 100%;
+
   padding-right: 2vw;
 }
 
@@ -141,6 +141,7 @@
 
   .display {
     padding-right: 0;
+    background-color: white;
   }
 
   .file_details {
