--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -63,6 +63,13 @@ embed {
     overflow-y: scroll;
     background-color: rgb(22, 68, 80);
     border-radius: 0 0 40px 0;
+    overflow-y: scroll;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+}
+
+.metadata_container::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .scroll_up_bar {
@@ -169,6 +176,7 @@ embed {
 
     .summary_container {
         height: 100vh;
+        background-color: white;
     }
 
     .metadata_container {
